[gd_scene load_steps=3 format=3 uid="uid://bbl0q8j8nq7ms"]

[ext_resource type="Script" path="res://main.gd" id="1_gk26j"]
[ext_resource type="PackedScene" uid="uid://cp0t7ugx3sg1c" path="res://ui.tscn" id="2_2esm6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_gk26j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 10000.0
offset_bottom = 10000.0
color = Color(0.301961, 0.423529, 0.247059, 1)

[node name="UI" parent="." instance=ExtResource("2_2esm6")]

[node name="PregameCountDown" type="Timer" parent="."]

[node name="gameCounter" type="Timer" parent="."]

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="choice" from="UI" to="." method="_on_ui_choice"]
[connection signal="reset_game" from="UI" to="." method="reset_game"]
[connection signal="start_game" from="UI" to="." method="pregame"]
[connection signal="timeout" from="PregameCountDown" to="." method="_on_pregame_count_down_timeout"]
[connection signal="timeout" from="gameCounter" to="." method="_on_game_counter_timeout"]
